# LiberTEM-iCoM

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: center_of_mass.ipynb  reference-validation.ipynb
src/libertem_icom/udf/: icom.py
tests/udf/: test_icom.py
